--- a/self-education.html
+++ b/self-education.html
@@ -122,6 +122,39 @@
           </article>
         </div>
       </section>
+      <section class="catalog">
+        <h2 class="catalog__title">Разное</h2>
+        <div class="catalog__content">
+          <article class="catalog__item">
+            <a class="card" href="https://teach-in.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">teach-in</h3>
+                <span class="card__description">Открытые видеолекции учебных курсов МГУ</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://cyberleninka.ru/">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">КиберЛенинка</h3>
+                <span class="card__description">Научная электронная библиотека</span>
+              </div>
+            </a>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
