--- a/self-education.html
+++ b/self-education.html
@@ -33,7 +33,23 @@
         <h1 class="about__title">Самообразование</h1>
         <p class="about__content">Материалы для самостоятельной подготовки</p>
       </section>
-      <section class="catalog">
+      <section class="page-menu">
+        <h2 class="page-menu__title visually-hidden">Меню страницы</h2>
+        <nav class="page-menu__menu">
+          <ul class="page-menu__list">
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-math">Математика</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-something">Разное</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-career">Карьера и навыки</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="catalog" id="catalog-math">
         <h2 class="catalog__title">Математика</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -122,7 +138,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-something">
         <h2 class="catalog__title">Разное</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -155,7 +171,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-career">
         <h2 class="catalog__title">Карьера и навыки</h2>
         <div class="catalog__content">
           <article class="catalog__item">
