--- a/self-education.html
+++ b/self-education.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Самообразование | mai_library — сборник материалов для маёвца</title>
+    <link rel="stylesheet" href="./normalize.css"/>
+    <link rel="stylesheet" href="./styles.css"/>
   </head>
   <body>
     <header class="header">
@@ -12,6 +14,26 @@
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
       <nav class="header__menu">
+        <div class="burger">
+          <input class="burger__checkbox" id="burger-checkbox" type="checkbox"/>
+          <label class="burger__label" for="burger-checkbox"></label>
+          <div class="burger__list-wrapper">
+            <ul class="burger__list">
+              <li class="burger__item">
+                <a class="burger__link" href="/">Сервисы</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Организации</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Справочники</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link burger__link--active" href="/">Самообразование</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
             <a class="header__menu-link" href="/">Сервисы</a>
@@ -551,16 +573,23 @@
             <a class="resources__link" title="Telegram" href="https://t.me/mai_library">
               <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <circle id="Oval" fill="#000000" cx="500" cy="500" r="500"></circle>
-                  <path d="M226.328419,494.722069 C372.088573,431.216685 469.284839,389.350049 517.917216,369.122161 C656.772535,311.36743 685.625481,301.334815 704.431427,301.003532 C708.567621,300.93067 717.815839,301.955743 723.806446,306.816707 C728.864797,310.92121 730.256552,316.46581 730.922551,320.357329 C731.588551,324.248848 732.417879,333.113828 731.758626,340.040666 C724.234007,419.102486 691.675104,610.964674 675.110982,699.515267 C668.10208,736.984342 654.301336,749.547532 640.940618,750.777006 C611.904684,753.448938 589.856115,731.588035 561.733393,713.153237 C517.726886,684.306416 492.866009,666.349181 450.150074,638.200013 C400.78442,605.66878 432.786119,587.789048 460.919462,558.568563 C468.282091,550.921423 596.21508,434.556479 598.691227,424.000355 C599.00091,422.680135 599.288312,417.758981 596.36474,415.160431 C593.441168,412.561881 589.126229,413.450484 586.012448,414.157198 C581.598758,415.158943 511.297793,461.625274 375.109553,553.556189 C355.154858,567.258623 337.080515,573.934908 320.886524,573.585046 C303.033948,573.199351 268.692754,563.490928 243.163606,555.192408 C211.851067,545.013936 186.964484,539.632504 189.131547,522.346309 C190.260287,513.342589 202.659244,504.134509 226.328419,494.722069 Z" id="Path-3" fill="#FFFFFF"></path>
+                  <circle id="Oval" fill="#ffffff" cx="500" cy="500" r="500"></circle>
+                  <path d="M226.328419,494.722069 C372.088573,431.216685 469.284839,389.350049 517.917216,369.122161 C656.772535,311.36743 685.625481,301.334815 704.431427,301.003532 C708.567621,300.93067 717.815839,301.955743 723.806446,306.816707 C728.864797,310.92121 730.256552,316.46581 730.922551,320.357329 C731.588551,324.248848 732.417879,333.113828 731.758626,340.040666 C724.234007,419.102486 691.675104,610.964674 675.110982,699.515267 C668.10208,736.984342 654.301336,749.547532 640.940618,750.777006 C611.904684,753.448938 589.856115,731.588035 561.733393,713.153237 C517.726886,684.306416 492.866009,666.349181 450.150074,638.200013 C400.78442,605.66878 432.786119,587.789048 460.919462,558.568563 C468.282091,550.921423 596.21508,434.556479 598.691227,424.000355 C599.00091,422.680135 599.288312,417.758981 596.36474,415.160431 C593.441168,412.561881 589.126229,413.450484 586.012448,414.157198 C581.598758,415.158943 511.297793,461.625274 375.109553,553.556189 C355.154858,567.258623 337.080515,573.934908 320.886524,573.585046 C303.033948,573.199351 268.692754,563.490928 243.163606,555.192408 C211.851067,545.013936 186.964484,539.632504 189.131547,522.346309 C190.260287,513.342589 202.659244,504.134509 226.328419,494.722069 Z" id="Path-3" fill="#202020"></path>
                 </g>
               </svg>
             </a>
           </li>
           <li class="resources__item">
             <a class="resources__link" title="GitHub" href="https://github.com/iannsgirdye/mai_library">
-              <svg width="98" height="96" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#000"/>
+              <svg width="48" height="47" viewBox="0 0 48 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_297_142)">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9285 0C10.6967 0 0 10.7708 0 24.0958C0 34.7472 6.85371 43.7634 16.3616 46.9545C17.5504 47.1944 17.9858 46.436 17.9858 45.7981C17.9858 45.2395 17.9466 43.3247 17.9466 41.3296C11.2903 42.7661 9.90416 38.4573 9.90416 38.4573C8.83445 35.6647 7.24947 34.9469 7.24947 34.9469C5.07086 33.4709 7.40816 33.4709 7.40816 33.4709C9.82482 33.6305 11.0929 35.9442 11.0929 35.9442C13.2318 39.6141 16.6785 38.5772 18.0651 37.9388C18.263 36.3829 18.8973 35.3058 19.5708 34.7075C14.2619 34.1489 8.67625 32.0746 8.67625 22.819C8.67625 20.186 9.62645 18.0318 11.1321 16.3565C10.8945 15.7582 10.0624 13.2844 11.3701 9.9733C11.3701 9.9733 13.3905 9.33489 17.9461 12.4467C19.8965 11.9192 21.908 11.6509 23.9285 11.6487C25.9489 11.6487 28.0085 11.9282 29.9104 12.4467C34.4665 9.33489 36.4869 9.9733 36.4869 9.9733C37.7946 13.2844 36.962 15.7582 36.7244 16.3565C38.2697 18.0318 39.1807 20.186 39.1807 22.819C39.1807 32.0746 33.5951 34.1088 28.2465 34.7075C29.1184 35.4654 29.8707 36.9014 29.8707 39.1755C29.8707 42.4067 29.8315 45.0001 29.8315 45.7976C29.8315 46.436 30.2674 47.1944 31.4557 46.955C40.9636 43.7629 47.8173 34.7472 47.8173 24.0958C47.8565 10.7708 37.1207 0 23.9285 0Z" fill="white"/>
+                </g>
+                <defs>
+                  <clipPath id="clip0_297_142">
+                    <rect width="48" height="47" fill="white"/>
+                  </clipPath>
+                </defs>
               </svg>
             </a>
           </li>
@@ -569,7 +598,7 @@
               class="resources__link" title="Вклады людей в проект"
               href="https://docs.google.com/spreadsheets/d/1Vh6gqDomF5zCN3raRgMZ6qr3p6keeTBc7Z3VQ8KqPLw/edit?usp=sharing"
             >
-              <svg fill="#000000" width="100px" height="100px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg fill="#ffffff" width="100px" height="100px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M17.726 13.02 14 16H9v-1h4.065a.5.5 0 0 0 .416-.777l-.888-1.332A1.995 1.995 0 0 0 10.93 12H3a1 1 0 0 0-1 1v6a2 2 0 0 0 2 2h9.639a3 3 0 0 0 2.258-1.024L22 13l-1.452-.484a2.998 2.998 0 0 0-2.822.504zm1.532-5.63c.451-.465.73-1.108.73-1.818s-.279-1.353-.73-1.818A2.447 2.447 0 0 0 17.494 3S16.25 2.997 15 4.286C13.75 2.997 12.506 3 12.506 3a2.45 2.45 0 0 0-1.764.753c-.451.466-.73 1.108-.73 1.818s.279 1.354.73 1.818L15 12l4.258-4.61z"/>
               </svg>
             </a>
